--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.5.0"
+    "mongodb": "^5.5.0",
+    "nodemailer": "^6.9.2"
   }
 }
