--- a/cliente/package.json
+++ b/cliente/package.json
@@ -13,5 +13,8 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-french-toast": "^1.0.4-beta.0"
+	}
 }
